Add Ajax and Vue basic frontend

--- a/Bookservice.MVC/wwwroot/css/site.css
+++ b/Bookservice.MVC/wwwroot/css/site.css
@@ -35,3 +35,14 @@ body {
         display: none;
     }
 }
+
+.bookTitle{
+    color: darkblue;
+    font-size: small;
+}
+
+.bookAuthorName{
+    color: darkred;
+    font-style: italic;
+    font-size: small;
+}
